--- a/arrangeOrder.html
+++ b/arrangeOrder.html
@@ -42,7 +42,7 @@
                 });
                 console.log(arrName);
                 if(arrName.length != $('#count').val()){
-                    alert('이름을 입력 하세요');
+                    alert('이름을 입력 해주세요');
                     return;
                 }
                 makeOrder();
